2011-01-08  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/dmcs/Log.cpp: Initialize logger.

	* src/network/Makefile.am [linux]: Create libthreads.a to fix
	FTBFS.
	* testsuite/Makefile.am: Likewise.

	* src/dyndmcs/DynamicConfiguration.cpp: Fix undefined dfs_level.

	* include/dmcs/Log.h: Add global logging facility.
	* include/dmcs/Makefile.am: Likewise.
	* src/dmcs/Log.cpp: Likewise.
	* src/Makefile.am: Likewise.
	* src/dmcs/Makefile.am: Likewise.
	* src/dmcsd.cpp: Likewise.
	* src/dmcsc.cpp: Likewise.

2011-01-07  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* testsuite/Makefile.am (TESTS_ENVIRONMENT): Make detailed Boost.Test reports.

	* src/dmcsc.cpp: Initial support for log4cxx.
	* src/dmcsd.cpp: Likewise.

	* configure.ac: Check for log4cxx and Boost.Asio.
	* src/Makefile.am: Likewise.

2011-01-07  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/dmcs/StreamingDMCS.h: Give StreamingDMCS the master power.
	* src/solver/RelSatSolver.cpp: Likewise.
	* src/network/ThreadFactory.cpp: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* include/solver/SatSolverFactory.h: Likewise.
	* include/solver/RelSatSolver.h: Likewise.
	* include/network/ThreadFactory.h: Likewise.
	* include/network/Handler.tcc: Likewise.
	* include/network/Handler.h: Likewise.
	* include/dmcs/StreamingCommandType.h: Likewise.

	* include/mcs/ProxySignatureByLocal.h: Let the references refer to
	stable sigs.

	* include/dmcs/BaseDMCS.h: Move createGuessingSignature to the
	base class.
	* src/dmcs/PrimitiveDMCS.cpp: Likewise.
	* src/dmcs/OptDMCS.cpp: Likewise.
	* src/dmcs/BaseDMCS.cpp: Likewise.
	* include/dmcs/PrimitiveDMCS.h: Likewise.
	* include/dmcs/OptDMCS.h: Likewise.

2011-01-07  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/parser/ClaspResultBuilder.tcc: Fix BeliefSet instantiation.
	* testsuite/testBeliefComparison.cpp: Likewise.

	* include/network/Handler.tcc: Check for errors in the ASIO
	call-back methods.
	* src/network/Server.cpp: Likwise.
