@@ -1,5 +1,11 @@
 2011-01-08  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
 
+	* include/network/MessagingGateway.h: Add documentation.
+
+	* include/network/MessageQueueFactory.h: New factory method just
+	for incoming and outgoing queue.
+	* src/network/MessageQueueFactory.cpp: Likewise.
+
 	* src/dmcs/Log.cpp: Initialize logger.
 
 	* src/network/Makefile.am [linux]: Create libthreads.a to fix
